Fixed footer logo sizing Made map and itinerary show on safari

--- a/main/static/css/itinerary.css
+++ b/main/static/css/itinerary.css
@@ -14,6 +14,9 @@
   mask-image: linear-gradient(to right, transparent 0%, black 5%, black 95%, transparent 100%);
   /*noinspection CssInvalidPropertyValue*/
   -webkit-mask-image: linear-gradient(to right, transparent 0%, black 5%, black 95%, transparent 100%);
+}
+
+.chrome .slides {
   -webkit-mask-composite: destination-in;
 }
 
